elixir/force-app/main/default/objects/Proof_Of_Identity_Do__c/Proof_Of_Identity_Do__c.object-meta.xml
<CustomObject>
    <label>Proof Of Identity Document</label>
    <nameField>
        <label>Proof Of Identity Do Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proof Of Identity Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>