elixir/force-app/main/default/objects/Proof_Of_Identity_Do__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian Birth Certificate</fullName>
            </value>
            <value>
                <fullName>Australian Citizenship Certificate</fullName>
            </value>
            <value>
                <fullName>Australian Drivers Licence</fullName>
            </value>
            <value>
                <fullName>Australian Passport</fullName>
            </value>
            <value>
                <fullName>Australian Photo Firearms Licence</fullName>
            </value>
            <value>
                <fullName>Australian Taxation Office Correspondence (with TFN)</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Centrelink or Social Security Card</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Deed Poll</fullName>
            </value>
            <value>
                <fullName>Department of Veterans Affairs Card</fullName>
            </value>
            <value>
                <fullName>Electoral Roll Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Electricity Bill</fullName>
            </value>
            <value>
                <fullName>Gas Bill</fullName>
            </value>
            <value>
                <fullName>Government Benefits Notice</fullName>
            </value>
            <value>
                <fullName>Health Care Card</fullName>
            </value>
            <value>
                <fullName>International Passport</fullName>
            </value>
            <value>
                <fullName>Internet Service Provider Bill</fullName>
            </value>
            <value>
                <fullName>Landline Phone Bill</fullName>
            </value>
            <value>
                <fullName>Marriage Certificate</fullName>
            </value>
            <value>
                <fullName>Medicare Card</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle Registration or Insurance Papers</fullName>
            </value>
            <value>
                <fullName>National Identity Card</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pension Card</fullName>
            </value>
            <value>
                <fullName>Professional or Trade Association Card</fullName>
            </value>
            <value>
                <fullName>Proof of Age Card</fullName>
            </value>
            <value>
                <fullName>Property Insurance Papers</fullName>
            </value>
            <value>
                <fullName>Property Lease or Rental Agreement</fullName>
            </value>
            <value>
                <fullName>Rates Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>