elixir/force-app/main/default/objects/Proof_Of_Identity_Do__c/fields/Document_Verified__c.field-meta.xml
<CustomField>
    <fullName>Document_Verified__c</fullName>
    <label>Document Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>