elixir/force-app/main/default/objects/Proof_Of_Identity_Do__c/fields/Original_Sighted__c.field-meta.xml
<CustomField>
    <fullName>Original_Sighted__c</fullName>
    <label>Original Sighted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>