elixir/force-app/main/default/objects/Proof_Of_Identity_Do__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <label>Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Proof Of Identity Documents</relationshipLabel>
    <relationshipName>Proof_Of_Identity_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>